seq-config.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-seq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-seq
  template:
    metadata:
      labels:
        app: my-seq
    spec:
      containers:
        - name: my-seq
          image: datalust/seq
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
            - containerPort: 5341 
---
apiVersion: v1
kind: Service
metadata:
  name: my-seq-int
spec:
  ports:
    - name: my-seq
      port: 80
      targetPort: 5341
  selector:
    app: my-seq

# kind: Pod
# apiVersion: apps/v1
# metadata:
#   name: seq

# spec:
#   replicas: 1
#   containers:
#   - name: seq
#     image: datalust/seq:latest
#     ports:
#     - containerPort: 80
#     - containerPort: 5341
#     env:
#     - name: ACCEPT_EULA
#       value: "Y"
#     volumeMounts:
#     - mountPath: "/data"
#       name: volume
#   volumes:
#     - name: volume
#       persistentVolumeClaim:
#         claimName: azure-managed-disk
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: seq
# spec:
#   type: LoadBalancer
#   ports:
#   - port: 80
#   selector:
#     app: seq
