seq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-seq-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: microservice.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-seq # deployment
            port: 
              number: 80
